@@ -1,3 +1,9 @@
+Thu Oct  2 23:28:02 2003  Kristian Rietveld  <kris@gtk.org>
+
+	* gtk/gtkcombobox.c: Added API doc comments.
+
+	* gtk/gtkcomboboxentry.c: Ditto.
+
 2003-10-02  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtktoggleaction.c: Documentation tweaks.
